# testrift-server

./: .gitignore  pyproject.toml  requirements.txt  tasks.py
.githooks/: README.md  pre-push
.github/workflows/: publish-nuget.yml  publish-pypi.yml  tests.yml
docs/: attachments.md  websocket_protocol.md
nuget/TestRift.Server/: AssemblyInfo.cs  README.md  TestRift.Server.csproj  testrift-server.bat  testrift-server.ps1  testrift-server.sh
scripts/: get_version.py
src/testrift_server/: api_handlers.py  cleanup.py  config.py  database.py  handlers.py  models.py  protocol.py  protocol_utils.py  tr_server.py  utils.py  websocket.py
src/testrift_server/static/: classifications.js  msgpack.min.js  protocol.js  status-badges.css  test_case_log.css  test_case_log.js
src/testrift_server/templates/: analyzer.html  failures.html  index.html  matrix.html  test_case_log.html  test_run.html
tests/: protocol_helpers.py  requirements.txt  test_integration_ui.py
tests/server/: test_attachments_and_export.py  test_database_functions.py  test_database_schema.py  test_http_api.py  test_integration.py  test_live_log_streaming.py  test_server_startup_restart_and_admin.py  test_template_handlers_and_cleanup.py  test_timestamp_handling.py  test_websocket_message_validation.py  test_websocket_protocol.py
