[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "testrift-server"
dynamic = ["version"]
description = "TestRift real-time test run server: live logs, results storage, and web UI for browsing and analysis."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Andreas Anderberg" }]
license = "Apache-2.0"
license-files = ["LICENSE"]
dependencies = [
  "aiohttp>=3.8.0",
  "aiofiles>=23.0.0",
  "PyYAML>=6.0",
  "jinja2>=3.0.0",
  "aiosqlite>=0.19.0",
]

[project.scripts]
testrift-server = "testrift_server.cli:main"

[project.urls]
Repository = "https://github.com/testrift/testrift-server"
Issues = "https://github.com/testrift/testrift-server/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
testrift_server = [
  "testrift_server.yaml",
  "templates/*.html",
  "static/*.js",
  "static/*.css",
]


